--- a/thesis.bib
+++ b/thesis.bib
@@ -3511,3 +3511,16 @@ URL = {https://doi.org/10.1137/0216006},
 	title = {Ueber Diffusion},
 	journal = {Ann. Phys. Chem.}
 }
+@article{Dubbeldam_2009,
+	doi = {10.1080/08927020902818039},
+	url = {https://doi.org/10.1080%2F08927020902818039},
+	year = 2009,
+	month = {oct},
+	publisher = {Informa {UK} Limited},
+	volume = {35},
+	number = {12-13},
+	pages = {1084--1097},
+	author = {David Dubbeldam and Denise C. Ford and Donald E. Ellis and Randall Q. Snurr},
+	title = {A new perspective on the order-$\less$i$\greater$n$\less$/i$\greater$algorithm for computing correlation functions},
+	journal = {Molecular Simulation}
+}
