--- a/thesis.bib
+++ b/thesis.bib
@@ -3524,3 +3524,12 @@ URL = {https://doi.org/10.1137/0216006},
 	title = {A new perspective on the order-$\less$i$\greater$n$\less$/i$\greater$algorithm for computing correlation functions},
 	journal = {Molecular Simulation}
 }
+@book{frenkel2001msd,
+  title={Understanding molecular simulation: from algorithms to applications},
+  author={Frenkel, Daan and Smit, Berend},
+  volume={1},
+  pages={84--104},
+  chapter=4,
+  year={2001},
+  publisher={Elsevier}
+}
