--- a/3-fastsim.tex
+++ b/3-fastsim.tex
@@ -632,7 +632,7 @@ For instance, the standard deviation of the Boltzmann weighted energy distributi
 
 We introduced two other statistical quantities that could be interesting in describing the distribution: the skewness that characterizes the asymmetry of the distribution and the kurtosis that quantifies the ``tailedness'' (the number of values in the tail of the distribution). The first one is a standardized third moment while the second is a standardized fourth moment of the distribution. For a random variable $X$, whose mean value is $m$ and standard deviation $\sigma$ an n-th order moment $\text{M}_{n}(X)$ is defined as:
 \begin{equation}
-  \text{M}_n(X) = \mathbb{E}\left[\left(\dfrac{X-m}{\sigma}\right)^n\right]
+  \text{M}_n(X) = \mathbb{E}\left[{\left(\dfrac{X-m}{\sigma}\right)}^n\right]
 \end{equation}
 These quantities bring in another information on the distribution. For instance, if the distribution is skewed toward the most negative pore energies it would favor the adsorption at higher pressure, while the opposite would explain a bigger drop in selectivity. The overall shape of the distribution needs to be defined by more than the standard deviation and the mean value in order to capture the origins of the drop in selectivity. Ideally, it would be better to have the whole information on the distribution, but visually speaking, it would be far too complex to compare the structures according to this multidimensional descriptor and the statistical quantities compress in a way the complex data on the energy distribution.
 
