--- a/thesis.bib
+++ b/thesis.bib
@@ -1760,7 +1760,7 @@ for Global Competitiveness},
   volume={1},
   pages={269--287},
   chapter=11,
-  year={2001},
+  year={2002},
   publisher={Elsevier}
 }
 @book{frenkel2001md,
@@ -1769,7 +1769,7 @@ for Global Competitiveness},
   volume={1},
   pages={63--105},
   chapter=4,
-  year={2001},
+  year={2002},
   publisher={Elsevier}
 }
 @book{auerbach2003handbook,
@@ -2845,7 +2845,7 @@ for Global Competitiveness},
   pages = {1785--1788},
   numpages = {0},
   year = {1996},
-  month = {Aug},
+  month = Aug,
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevLett.77.1785},
   url = {https://link.aps.org/doi/10.1103/PhysRevLett.77.1785}
@@ -2859,7 +2859,7 @@ for Global Competitiveness},
   pages = {4314--4317},
   numpages = {0},
   year = {1995},
-  month = {Dec},
+  month = Dec,
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevLett.75.4314},
   url = {https://link.aps.org/doi/10.1103/PhysRevLett.75.4314}
@@ -3515,13 +3515,13 @@ URL = {https://doi.org/10.1137/0216006},
 	doi = {10.1080/08927020902818039},
 	url = {https://doi.org/10.1080%2F08927020902818039},
 	year = 2009,
-	month = {oct},
+	month = Oct,
 	publisher = {Informa {UK} Limited},
 	volume = {35},
 	number = {12-13},
 	pages = {1084--1097},
 	author = {David Dubbeldam and Denise C. Ford and Donald E. Ellis and Randall Q. Snurr},
-	title = {A new perspective on the order-$\less$i$\greater$n$\less$/i$\greater$algorithm for computing correlation functions},
+	title = {A new perspective on the order-$mathbf{n}$ algorithm for computing correlation functions},
 	journal = {Molecular Simulation}
 }
 @book{frenkel2001msd,
@@ -3530,6 +3530,6 @@ URL = {https://doi.org/10.1137/0216006},
   volume={1},
   pages={84--104},
   chapter=4,
-  year={2001},
+  year={2002},
   publisher={Elsevier}
 }
